Sing in에 링크 추가

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!-- Menu -->
                 <ul class="menu">
                     <li>
-                        <a href="#">Sign in</a>
+                        <a href="/signin/index.html">Sign in</a>
                     </li>
                     <li>
                         <a href="#">My Starbucks</a>
@@ -838,6 +838,7 @@
     <div id="to-top">
         <div class="material-symbols-outlined">arrow_upward</div>
     </div>
+
 
 
 </body>
