--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <script defer src="/js/youtube.js"></script>
     <!-- Scroll Magic -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Main.js -->
+    <!-- common.js -->
+    <script defer src="/js/common.js"></script>
+    <!-- main.js -->
     <script defer src="/js/main.js"></script>
 
 </head>
