--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <!-- common.css -->
+    <link rel="stylesheet" href="/css/common.css">
     <!-- main.css -->
     <link rel="stylesheet" href="/css/main.css">
     
